<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/doctori"
    android:alpha=".85"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="diana.cabinetmedical.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:touchscreenBlocksFocus="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:layout_gravity="fill_vertical"
        android:alpha="250">

        <Button
            android:id="@+id/btnAlergologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn1"
            android:background="#50ffffff"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:width="130dp"
            android:clickable="true" />

        <Button
            android:id="@+id/btnBInfectioase"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="160dp"/>

        <Button
            android:id="@+id/btnCardiologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnChirurgie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnDermato"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/btnEndocrinologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginStart="160dp"
            android:layout_marginTop="70dp" />

        <Button
            android:id="@+id/btnEstetica"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="130dp" />

        <Button
            android:id="@+id/btnGastro"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="130dp" />

        <Button
            android:id="@+id/btnHematologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="190dp" />

        <Button
            android:id="@+id/btnHomeopatie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn10"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="190dp" />

        <Button
            android:id="@+id/btnLaborator"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn11"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="250dp" />

        <Button
            android:id="@+id/btnMedicFamilie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn12"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="250dp" />

        <Button
            android:id="@+id/btnNeurologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn13"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="310dp" />

        <Button
            android:id="@+id/btnGinecologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn14"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="310dp" />

        <Button
            android:id="@+id/btnOftalmologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn15"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="370dp" />

        <Button
            android:id="@+id/btnOncologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn16"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="370dp" />

        <Button
            android:id="@+id/btnOrl"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn17"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="430dp" />

        <Button
            android:id="@+id/btnPediatrie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn18"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="430dp" />

        <Button
            android:id="@+id/btnRecuperare"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn19"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnAlergologie"
            android:layout_alignStart="@+id/btnAlergologie"
            android:layout_marginTop="490dp" />
        <Button
            android:id="@+id/btnStomatologie"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn20"
            android:background="#50ffffff"
            android:textAlignment="center"
            android:width="130dp"
            android:layout_below="@+id/btnBInfectioase"
            android:layout_alignStart="@+id/btnBInfectioase"
            android:layout_marginTop="490dp" />

    </RelativeLayout>

</ScrollView>
