<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_register_upside"

    tools:context="diana.medical.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNume"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp"
        android:layout_alignParentEnd="true"
        android:hint="@string/prompt_user"
        android:gravity="center_vertical"
      />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtParola"
        android:layout_below="@+id/txtNume"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignEnd="@+id/txtNume"
        android:hint="@string/prompt_password"
        android:gravity="center_vertical"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_register"
        android:id="@+id/btnLog"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Not a member? Sign up now"
        android:layout_below="@+id/btnLog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:background="@drawable/bg_register"
        android:id="@+id/btnSignUp"/>


</RelativeLayout>
